<?xml version="1.0"?>
<package>
  <name>volturnus</name>
  <version>0.0.0</version>
  <description>catkin package for Volturnus (OSU SeaBotix vLBV300)</description>

  <maintainer email="nicholas.lawrance@oregonstate.edu">nick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <export>
  </export>
</package>
